# Autobot

./: 1.SLDASM  100mm_omni_ v2.step  100mm_omni_.SLDASM  EasyMech Anti Slip Motor Coupling 10mm Internal Dia (ID).STEP  Omni 60 mm.SLDPRT  P_001.stp  README.md  SHF8.SLDPRT  banebot.SLDPRT  flange 3d printed.SLDPRT  newwwwwwww.SLDASM  proto2 BD.SLDPRT  sheet metal part.SLDPRT  ~$stainless steel rod.SLDPRT
cad/: 3D PRINTED PART.SLDPRT  Ball Bearing 8 x 16 x 5.SLDPRT  EasyMech Anti Slip Motor Coupling 10mm Internal Dia (ID).SLDPRT  P_001.SLDPRT  ROTARY ENCODER1.SLDPRT  flange.SLDPRT  new proto.SLDASM  stainless steel rod.SLDPRT
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: controller.launch.py  gaz.launch.py  gazebo_bd.launch.py  gazebo_controller.launch.py  my_robot_gazebo.launch.xml  parameter.launch.xml  rviz.launch.xml  teleop_ps4.launch.py
my_robot_bringup/rviz/: display.rviz  urdf_config.rviz
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/controller/: my_robot_controller.yaml
my_robot_description/gazebo_urdf/: ar_bd.csv
my_robot_description/launch/: display.launch.py
my_robot_description/meshes/autobot/: base_link.stl  front_wheel.stl  left_wheel.STL  right_wheel.STL
my_robot_description/urdf/: ar_bd.urdf  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  my_robot_controller.xacro
